--- a/slides/code/SN4.tex
+++ b/slides/code/SN4.tex
@@ -245,7 +245,7 @@
 \AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -255,7 +255,6 @@
 \AgdaDatatype{SN*}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{v}\AgdaSymbol{)}\<%
 \end{code}
 %</adequacy-subst>
@@ -413,7 +412,7 @@
 \AgdaSymbol{→}\AgdaSpace{}\>[1]
 \AgdaHole{\{!\ \ \ !\}}\AgdaSpace{}%
 \\
-\>[0]\AgdaSymbol{\vdots}\>[1]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ ((rename\ (ext\ ρ)\ n)\ [\ u\ ])}\<%
+\>[0]\AgdaSymbol{\vdots}\>[1]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ ((rename\ ρ\ n)\ [\ u\ ])}\<%
 \\
 \end{code}
 %</inter-rename>
