--- a/slides/code/SN5.tex
+++ b/slides/code/SN5.tex
@@ -412,7 +412,7 @@
 \AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{ρ}\AgdaSpace{}%
 \AgdaBound{Ln}\AgdaSpace{}%
-\AgdaSymbol{\{\AgdaUnderscore{}\}\{}\AgdaBound{ρ₁}\AgdaSymbol{\}\{}\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{ρ₁}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
@@ -1158,11 +1158,7 @@
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{ρ}\AgdaSymbol{\}\{}\AgdaArgument{u}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSymbol{\}}\AgdaSpace{}
 \AgdaBound{SNu}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 %\AgdaFunction{transport}\AgdaSpace{}%
