--- a/slides/code/iso_term.tex
+++ b/slides/code/iso_term.tex
@@ -1090,7 +1090,6 @@
 \end{code}
 %</cong-abs>
 
-%<*cong-pair>
 \begin{code}
 	\>[2]\AgdaInductiveConstructor{cong×₁}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
@@ -1181,7 +1180,10 @@
 	\\
 	\>[0]\<%
 	\\
-	%
+\end{code}
+%<*cong-pair>
+\begin{code}
+	\>[2]\vdots\< \\
 	\>[2]\AgdaInductiveConstructor{cong×₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
@@ -1224,7 +1226,6 @@
 	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
-	%
 	\>[2]\AgdaInductiveConstructor{sym-cong×₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
@@ -1269,6 +1270,7 @@
 	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
+	\>[2]\vdots\< \\
 \end{code}
 %</cong-pair>
 
