--- a/slides/code/SN1.tex
+++ b/slides/code/SN1.tex
@@ -389,7 +389,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
-\AgdaBound{t'}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{ƛt'}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{SN}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -397,10 +397,10 @@
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-\AgdaBound{t'}\AgdaSpace{}%
+\AgdaBound{ƛt'}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{SN}\AgdaSpace{}%
-\AgdaBound{t'}\<%
+\AgdaBound{ƛt'}\<%
 \\
 \>[.][@{}l@{}]\<[283I]%
 \>[8]\AgdaFunction{aux}\AgdaSpace{}%
