--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -34,36 +34,47 @@
 	\tableofcontents
 \end{frame}
 
-\section{Introducción a LCST}
+\section{Marco teórico}
 
-%\input{chapter/stlc}
+\subsection{Introducción a LCST}
 
-\section{Introducción a Sistema I}
+\input{chapter/stlc}
+
+\subsection{Introducción a Sistema I}
 
 \begin{frame}{Outline}
-	\tableofcontents[currentsection]
+	\tableofcontents[currentsubsection]
 \end{frame}
 
-%\input{chapter/system-i}
+\input{chapter/system-i}
 
-%\section{Introducción a Agda}
+\section{Aportes}
 
-\section{Formalización}
+\subsection{Formalización}
 
 \begin{frame}{Outline}
-	\tableofcontents[currentsection]
+	\tableofcontents[currentsubsection]
 \end{frame}
 
 \AtBeginEnvironment{code}{\fontsize{10}{12}\selectfont}
-%\input{chapter/formalization}
+\input{chapter/formalization}
 
-\section{Normalización fuerte}
+\subsection{Normalización fuerte}
 
 \begin{frame}{Outline}
 	\tableofcontents[currentsection]
 \end{frame}
 
-%\input{chapter/strong-norm}
+\input{chapter/strong-norm}
 %\input{chapter/well-founded}
+
+\section{Conclusiones}
+
+\begin{frame}{Outline}
+	\tableofcontents[currentsection]
+\end{frame}
+
+
+\input{chapter/closure}
 
 \end{document}
