--- a/slides/code/SN2.tex
+++ b/slides/code/SN2.tex
@@ -147,7 +147,7 @@
 \\
 \>[0]\AgdaFunction{SN*-SN}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
-\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{SNt}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{sn}\AgdaSpace{}%
