--- a/slides/code/strong_norm.tex
+++ b/slides/code/strong_norm.tex
@@ -2672,3 +2672,23 @@
 	\end{AgdaSuppressSpace}
 \end{AgdaAlign}
 %</lemma-iso>
+
+%<*adecuacy-iso>
+\begin{code}%
+	\>[0]\vdots\<
+	\\
+	\>[0]\AgdaFunction{adequacy}\AgdaSpace{}%
+	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+	\AgdaBound{iso}\AgdaSpace{}%
+	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+	\AgdaBound{n}\AgdaSymbol{)}%
+	\>[23]\AgdaBound{⊨σ}\AgdaSpace{}%
+	\AgdaSymbol{=}\AgdaSpace{}%
+	\AgdaFunction{lemma-≡}\AgdaSpace{}%
+	\AgdaSymbol{(}\AgdaFunction{adequacy}\AgdaSpace{}%
+	\AgdaBound{n}\AgdaSpace{}%
+	\AgdaBound{⊨σ}\AgdaSymbol{)}\<%
+	\\
+	\>[0]\vdots\<
+\end{code}
+%</adecuacy-iso>
