--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -62,7 +62,7 @@
 \subsection{Normalización fuerte}
 
 \begin{frame}{Outline}
-	\tableofcontents[currentsection]
+	\tableofcontents[currentsubsection]
 \end{frame}
 
 \input{chapter/strong-norm}
