--- a/slides/code/strong_norm.tex
+++ b/slides/code/strong_norm.tex
@@ -1654,13 +1654,13 @@
 			\>[8]\AgdaFunction{aux}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
 			\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-			\AgdaBound{SNt}\AgdaSymbol{)}\AgdaSpace{}%
+			\AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
 			\AgdaBound{step}\AgdaSymbol{))}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
 			\AgdaFunction{lemma-≡}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaBound{SNt}\AgdaSpace{}%
+			\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
 			\AgdaBound{step}\AgdaSymbol{))}\<%
 			\\
@@ -1668,13 +1668,13 @@
 			\>[8]\AgdaFunction{aux}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
 			\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-			\AgdaBound{SNt}\AgdaSymbol{)}\AgdaSpace{}%
+			\AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
 			\AgdaBound{step}\AgdaSymbol{))}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
 			\AgdaFunction{lemma-≡}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaBound{SNt}\AgdaSpace{}%
+			\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
 			\AgdaBound{step}\AgdaSymbol{))}\<%
 			\\
