--- a/slides/code/example.tex
+++ b/slides/code/example.tex
@@ -437,38 +437,6 @@
 
 %<*reduction>
 \begin{code}%
-\>[0]\AgdaFunction{T₁}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaInductiveConstructor{∅}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaFunction{fun}\<%
-\\
-\>[0]\AgdaFunction{T₁}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-\AgdaInductiveConstructor{Z}\<%
-\\
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{T₂}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaInductiveConstructor{∅}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaFunction{prod}\<%
-\\
-\>[0]\AgdaFunction{T₂}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-\AgdaFunction{T₁}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-\\
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{T₃}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
@@ -480,10 +448,18 @@
 \>[0]\AgdaFunction{T₃}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{π}\AgdaSpace{}%
-\AgdaFunction{fun}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSymbol{)}\AgdaSpace{}%
 %\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
 %\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaFunction{T₂}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
 \AgdaInductiveConstructor{Z}\<%
@@ -493,7 +469,10 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{T₃}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-\AgdaFunction{T₁}\AgdaSpace{}%
+\AgdaSymbol{(}
+\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
 \AgdaInductiveConstructor{Z}\<%
@@ -507,27 +486,6 @@
 
 %<*iso-type>
 \begin{code}%
-\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\<%
-\\
-\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{sym}\AgdaSpace{}%
-\AgdaInductiveConstructor{curry}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
