--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -1,7 +1,7 @@
 %<*relation>
 \begin{code}
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}⇝\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}⇝*\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -32,7 +32,7 @@
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
 \>[0]\<%
@@ -61,7 +61,7 @@
 %
 \>[4]\AgdaSymbol{→}%
 \>[63I]\AgdaBound{r}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
 \>[.][@{}l@{}]\<[63I]%
@@ -70,7 +70,7 @@
 %
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
 %
@@ -99,7 +99,7 @@
 %
 \>[4]\AgdaSymbol{→}%
 \>[84I]\AgdaBound{r}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
 \>[.][@{}l@{}]\<[84I]%
@@ -108,7 +108,7 @@
 %
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \end{code}
 %</relation>
@@ -139,7 +139,7 @@
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
 %
@@ -296,7 +296,7 @@
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
 %
