--- a/paper/code/example.tex
+++ b/paper/code/example.tex
@@ -860,7 +860,7 @@ _ = ^ π (` (S Z) · N-⋆)
 	\>[0]\AgdaFunction{N⇝⋆}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaFunction{N}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+	\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{⋆}\<%
 	\\
 	\>[0]\AgdaFunction{N⇝⋆}%
@@ -1016,7 +1016,7 @@ _ = ^ π (` (S Z) · N-⋆)
 	\>[0]\AgdaFunction{¬N⇝⋆}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaFunction{N}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+	\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 	\AgdaSymbol{\AgdaUnderscore{}}\<%
 	\\
 	\>[0]\AgdaFunction{¬N⇝⋆}\AgdaSpace{}%
@@ -1177,7 +1177,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \>[0]\AgdaFunction{Ω⇝⋆}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Ω}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝*}}\AgdaSpace{}%
 \AgdaInductiveConstructor{⋆}\<%
 \\
 \>[0]\AgdaFunction{Ω⇝⋆}%
