--- a/paper/references.bib
+++ b/paper/references.bib
@@ -11,30 +11,23 @@
 	publisher = "Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik"
 }
 @article{dist-lambda,
-	author       = {Beniamino Accattoli and Alejandro D{\'{\i}}az{-}Caro},
-	title        = {Functional Pearl: The Distributive {\(\lambda\)}-Calculus},
-	journal      = {CoRR},
-	volume       = {abs/2002.07944},
-	year         = {2020},
-	url          = {https://arxiv.org/abs/2002.07944},
-	eprinttype   = {arXiv},
-	eprint       = {2002.07944},
-	timestamp    = {Mon, 02 Mar 2020 16:46:06 +0100},
-	biburl       = {https://dblp.org/rec/journals/corr/abs-2002-07944.bib},
-	bibsource    = {dblp computer science bibliography, https://dblp.org}
+	author = "Accattoli, Beniamino and D\'{\i}az-Caro, Alejandro",
+	title = "Functional Pearl: The Distributive $\lambda$-Calculus",
+	booktitle = "Functional and Logic Programming (FLOPS 2020)",
+	editor = "Nakano, Keisuke and Sagonas, Konstantinos",
+	series = "Lecture Notes in Computer Science",
+	publisher = "Springer, Cham",
+	pages = "34--49",
+	volume = "12073",
+	year = "2020"
 }
 @article{extensional-proofs,
-	author       = {Alejandro D{\'{\i}}az{-}Caro and Gilles Dowek},
-	title        = {Extensional proofs in a propositional logic modulo isomorphisms},
-	journal      = {CoRR},
-	volume       = {abs/2002.03762},
-	year         = {2020},
-	url          = {https://arxiv.org/abs/2002.03762},
-	eprinttype   = {arXiv},
-	eprint       = {2002.03762},
-	timestamp    = {Wed, 12 Feb 2020 16:38:55 +0100},
-	biburl       = {https://dblp.org/rec/journals/corr/abs-2002-03762.bib},
-	bibsource    = {dblp computer science bibliography, https://dblp.org}
+	author = "Alejandro D\'{\i}az-Caro and Gilles Dowek",
+	title = "Extensional proofs in a propositional logic modulo isomorphisms",
+	journal = "Theoretical Computer Science",
+	volume = "977",
+	pages = "114172",
+	year = "2023"
 }
 @thesis{sip,
 	author = {Sottile, Cristian},
@@ -45,32 +38,23 @@
 	url = {http://sedici.unlp.edu.ar/handle/10915/118544}
 }
 @article{sip-paper,
-	author       = {Cristian F. Sottile and Alejandro D{\'{\i}}az{-}Caro and Pablo E. Mart{\'{\i}}nez L{\'{o}}pez},
-	title        = {Polymorphic System {I}},
-	journal      = {CoRR},
-	volume       = {abs/2101.03215},
-	year         = {2021},
-	url          = {https://arxiv.org/abs/2101.03215},
-	eprinttype   = {arXiv},
-	eprint       = {2101.03215},
-	timestamp    = {Thu, 21 Jan 2021 14:42:30 +0100},
-	biburl       = {https://dblp.org/rec/journals/corr/abs-2101-03215.bib},
-	bibsource    = {dblp computer science bibliography, https://dblp.org}
+	author = "Sottile, Cristian and D\'iaz-Caro, Alejandro and Mart\'inez L\'opez, Pablo E.",
+	title = "Polymorphic System I",
+	booktitle = "Proceedings of the 32nd Symposium on the Implementation and Application of Functional Programming Languages (IFL 2020)",
+	series = "ICPS Proceedings",
+	publisher = "ACM",
+	pages = "127--137",
+	year = "2020",
 }
 @article{lambda-plus,
-	author       = {Alejandro D{\'{\i}}az{-}Caro and
-	Pablo E. Mart{\'{\i}}nez L{\'{o}}pez},
-	title        = {Isomorphisms considered as equalities: Projecting functions and enhancing
-	partial application through and implementation of lambda+},
-	journal      = {CoRR},
-	volume       = {abs/1511.09324},
-	year         = {2015},
-	url          = {http://arxiv.org/abs/1511.09324},
-	eprinttype    = {arXiv},
-	eprint       = {1511.09324},
-	timestamp    = {Mon, 13 Aug 2018 16:47:37 +0200},
-	biburl       = {https://dblp.org/rec/journals/corr/Diaz-CaroL15.bib},
-	bibsource    = {dblp computer science bibliography, https://dblp.org}
+	author = "D\'iaz-Caro, Alejandro and Mart\'inez L\'opez, Pablo E.",
+	title = "Isomorphisms considered as equalities: Projecting functions and enhancing partial application through an implementation of $\lambda^+$",
+	booktitle = "Proceedings of the 27th Symposium on the Implementation and Application of Functional Programming Languages",
+	series = "IFL '15",
+	publisher = "ACM",
+	pages = "9:1--9:11",
+	articleno = "9",
+	year = "2015",
 }
 @article{MSCSSurvey05,
 	title = {A short survey of Isomorphisms of Types},
@@ -245,3 +229,15 @@
 	url = {https://www.worldcat.org/title/lectures-on-the-curry-howard-isomorphism/oclc/1171193011&referer=brief_results},
 	year = 2006
 }
+@book{TRAT,
+	author = {Baader, Franz and Nipkow, Tobias},
+	biburl = {https://www.bibsonomy.org/bibtex/23c776eb220890e2a2de7071b80269be3/dblp},
+	isbn = {978-0-521-45520-6},
+	keywords = {dblp},
+	pages = {I-XII, 1-301},
+	publisher = {Cambridge University Press},
+	timestamp = {2011-04-29T15:27:03.000+0200},
+	title = {Term rewriting and all that.},
+	year = 1998
+}
+
