--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -6,6 +6,7 @@
 \usepackage{tikz}
 \usetheme{Warsaw}
 \setbeamertemplate{headline}{}
+\usefonttheme[onlymath]{serif}
 
 \title{Formalización de Sistema I con tipo Top}
 \author{
