--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -10,7 +10,7 @@ Aquí, se presenta una formalización de una adaptación de dicho sistema en el 
 Esta formalización va acompañada de pruebas formales que demuestran el cumplimiento de diversas propiedades, siendo la normalización fuerte una de las más cruciales.
 Es importante destacar que la prueba de normalización fuerte utiliza la técnica de \textit{logical relations} pero con predicados distintos a los presentados en la prueba de candidatos de reducibilidad de Girard.
 
-En esta tesina no solo se exploran los sistemas módulo isomorfismos sino también, los intricados mecanismos que sirven de motor para muchas implementaciones de cálculo lambda, como lo son las substituciones explícitas, que desempeñan un papel fundamental en la manipulación de términos dentro del sistema.
+En esta tesina no solo se exploran los sistemas módulo isomorfismos sino también, los intrincados mecanismos que sirven de motor para muchas implementaciones de cálculo lambda, como lo son las substituciones explícitas, que desempeñan un papel fundamental en la manipulación de términos dentro del sistema.
 Además, se exponen los fundamentos de la correspondencia de Curry-Howard, la cual explica la estrecha relación entre la programación y la lógica.
 Esta correspondencia permitirá comprender la doble mirada que propone Sistema I, por un lado, puede ser visto como un lenguaje de programación y por el otro como un sistema de pruebas.
 Coincidentemente, el isomorfismo de Curry-Howard es lo que dio origen a los asistentes de pruebas como Coq y Agda.
