--- a/slides/code/SN4.tex
+++ b/slides/code/SN4.tex
@@ -279,6 +279,29 @@
 \end{code}
 %</adequacy-ids>
 
+%<*subst-split>
+\begin{code}%
+\>[0]
+\AgdaSymbol{(}
+\AgdaFunction{⟪ exts}\AgdaSpace{}
+\AgdaBound{σ}\AgdaSpace{}
+\AgdaFunction{⟫}\AgdaSpace{}
+\AgdaBound{t}
+\AgdaSymbol{)}
+\AgdaFunction{[}\AgdaSpace{}
+\AgdaBound{u}\AgdaSpace{}
+\AgdaFunction{]}\AgdaSpace{}
+\AgdaSymbol{=}\AgdaSpace{}
+\AgdaFunction{⟪}\AgdaSpace{}
+\AgdaBound{u}\AgdaSpace{}
+\AgdaFunction{•}\AgdaSpace{}
+\AgdaBound{σ}\AgdaSpace{}
+\AgdaFunction{⟫}\AgdaSpace{}
+\AgdaBound{t}
+\<%
+\end{code}
+%</subst-split>
+
 %<*adequacy-cons>
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{⊨\AgdaUnderscore{}•\AgdaUnderscore{}}}\AgdaSpace{}%
