--- a/slides/code/example.tex
+++ b/slides/code/example.tex
@@ -52,7 +52,8 @@
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
 \AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}
-\AgdaComment{--\ λ x . y (y x)}\<%
+%\AgdaComment{--\ λ x . y (y x)}
+\<%
 \\
 \end{code}
 %</term1>
@@ -84,7 +85,8 @@
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
 \AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}
-\AgdaComment{--\ λ y . λ x . y (y x)}\<%
+%\AgdaComment{--\ λ y . λ x . y (y x)}
+\<%
 \\
 \end{code}
 %</term2>
